--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "testSPD",
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/material": "^8.0.0",
     "chart.js": "^2.8.0"
   }
 }
